# CLUST

./: .cproject  .gitignore  .project  Makefile.am  Makefile.in  README.md  clust.c  clust.h  clustfunctions.c  clustfunctions.h  configure.ac  test_sinoscope.sh
src/: Makefile.am  clust.c  clust.h  clust_tp.h  main.c
